# snap_my_meal

./: .gitignore  Dockerfile.migration  Dockerfile.web  Makefile  Readme.md  load_migration.sh  set_env.sh
crud_proj/: Cargo.toml
crud_proj/boostdb/: api.rs  config.rs  health.rs  init.rs  mod.rs  pool.rs
crud_proj/src/: boostdb.rs  errors.rs  main.rs
crud_proj/src/boostdb/: api.rs  config.rs  health.rs  init.rs  mod.rs  pool.rs
crud_proj/src/handlers/: product_handler.rs
crud_proj/src/models/: categories.rs  mod.rs  pagination.rs  products.rs
crud_proj/src/reposistoris/: mod.rs  product_repositories.rs
crud_proj/src/repositories/: product_repositories.rs
crud_proj/src/repositories/product_repositories/: mod.rs
crud_proj/src/routers/: mod.rs
crud_proj/src/routers/api/: mod.rs  product_router.rs
crud_proj/src/services/: product_service.rs
database/postgres/: docker-compose.yml
database/postgres/migrations/: 0001_products_categories_table.sql
migrations/: 0001_products_categories_table.sql
migrations/mock_data/: mock_data.sql
