[package]
name = "crud_proj"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.41"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"
env_logger = "0.11.8"
uuid =  {version="1.18.0", features = ["serde"]}
